--- a/app/src/main/res/layout/khachhang_chondouong.xml
+++ b/app/src/main/res/layout/khachhang_chondouong.xml
@@ -6,24 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btn_khachhang_chonsan_douong"
-        android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_khachhang_Home"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_douong" />
-
     <TextView
         android:id="@+id/timsan"
         android:layout_width="413dp"
         android:layout_height="54dp"
         android:background="@color/white"
         android:gravity="center_vertical|center_horizontal"
-        android:text="Chọn sân"
+        android:text="Chọn đồ uống"
         android:textAlignment="center"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -34,21 +23,21 @@
 
 
     <SearchView
-        android:id="@+id/searchView_khachhang_chonsan"
+        android:id="@+id/searchView_khachhang_chondouong"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:background="@drawable/bg_btn_google"
         android:backgroundTint="#C5C5C5"
         android:iconifiedByDefault="false"
-        android:queryHint="Tên sân"
+        android:queryHint="Tên đồ uống"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timsan" />
+        app:layout_constraintTop_toBottomOf="@id/timsan" />
 
 
     <GridView
-        android:id="@+id/gridView_khachhang_chonsan"
+        android:id="@+id/gridView_khachhang_chondouong"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:numColumns="2"
@@ -57,22 +46,24 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/searchView_khachhang_chonsan"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_khachhang_Home"
+        app:layout_constraintTop_toBottomOf="@id/searchView_khachhang_chondouong"
+        app:layout_constraintBottom_toTopOf="@id/btn_khachhang_chonsan"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintHorizontal_bias="0" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_khachhang_Home"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/btn_khachhang_chonsan"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_menu">
-
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
+        android:layout_marginBottom="13dp"
+        android:text="Tiến hành đặt lịch"
+        android:background="@drawable/bg_btn_google"
+        app:backgroundTint="@color/green"
+        app:menu="@menu/bottom_nav_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
