--- a/app/src/main/res/layout/layout_userinfo_admin.xml
+++ b/app/src/main/res/layout/layout_userinfo_admin.xml
@@ -72,7 +72,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/imgUser" />
 
                 <TextView
-                    android:id="@+id/tv_email"
+                    android:id="@+id/tv_khachhang_userinfo_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="nguyentoductai@gmail.com"
@@ -96,7 +96,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_marginTop="10dp"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_email">
+                    app:layout_constraintTop_toBottomOf="@+id/tv_khachhang_userinfo_email">
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
