--- a/app/src/main/res/layout/admin_douong.xml
+++ b/app/src/main/res/layout/admin_douong.xml
@@ -29,7 +29,7 @@
 
         <SearchView
             android:id="@+id/search_admin_douong"
-            android:layout_width="match_parent"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/ln_admin_douong"
             android:layout_marginLeft="10dp"
@@ -37,6 +37,9 @@
             android:layout_marginRight="10dp"
             android:queryHint="Tên đồ uống"
             android:textSize="16dp"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/bg_btn_google"
+            android:backgroundTint="#C5C5C5"
             android:iconifiedByDefault="false"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcv_admin_douong"
