--- a/app/src/main/res/layout/khachhang_chonsan.xml
+++ b/app/src/main/res/layout/khachhang_chonsan.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
         android:clickable="true"
         app:layout_constraintBottom_toTopOf="@+id/bottom_khachhang_Home"
         app:layout_constraintEnd_toEndOf="parent"
