--- a/app/src/main/res/layout/khachhang_lichsu_chitiet.xml
+++ b/app/src/main/res/layout/khachhang_lichsu_chitiet.xml
@@ -1,35 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ProgressBar
+        android:id="@+id/progressBar_khachhang_lichsu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
+        android:visibility="gone"/>
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints">
-
+        <ImageView
+            android:id="@+id/btn_khachhang_lichsu_chitiet_goback"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="23dp"
+            android:layout_marginLeft="18dp"
+            android:src="@drawable/icon_back" />
         <TextView
             android:id="@+id/tv_khachhang_lichsu_tieude"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="18dp"
-            android:text="Thong tin chi tiết"
+            android:text="Thông tin chi tiết"
             android:textColor="@color/black"
             android:textSize="23dp"
             android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_khachhang_lichsu"
+            android:id="@+id/rcv_khachhang_lichsu_chitiet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_khachhang_lichsu_tieude"
-            android:layout_marginTop="10dp"></androidx.recyclerview.widget.RecyclerView>
+            android:layout_marginTop="10dp">
+        </androidx.recyclerview.widget.RecyclerView>
 
-
+        <TextView
+            android:id="@+id/tv_khachhang_thanhtoan_tongtien"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tổng tiền:"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:layout_below="@id/rcv_khachhang_lichsu_chitiet"
+            android:textColor="@color/black"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="30dp"/>
+        <TextView
+            android:id="@+id/tv_khachhang_lichsu_tongtien"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="300000.0 VND"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:layout_below="@id/rcv_khachhang_lichsu_chitiet"
+            android:textColor="@color/red"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="30dp"/>
     </RelativeLayout>
 
     <Button
@@ -37,19 +76,10 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_btn_google"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="20dp"
         android:text="Hủy đặt lịch"
         app:backgroundTint="@color/red"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_khachhang_lichsu"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_khachhang_lichsu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_menu"/>
+        app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
