--- a/app/src/main/res/layout/khachhang_userinfo.xml
+++ b/app/src/main/res/layout/khachhang_userinfo.xml
@@ -43,8 +43,8 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imv_khachhang_userinfo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:src="@drawable/profile"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                 app:layout_constraintEnd_toEndOf="@+id/imageView4"
@@ -92,6 +92,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_khachhang_userinfo_email">
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/btn_khachhang_user_doimk"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     app:cardElevation="7dp">
@@ -116,7 +117,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/btn_editProfile"
+                    android:id="@+id/btn_khachhang_user_chinhsua"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_marginVertical="10dp"
