--- a/app/src/main/res/layout/admin_khachhang.xml
+++ b/app/src/main/res/layout/admin_khachhang.xml
@@ -9,77 +9,44 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints">
-       <LinearLayout
-           android:id="@+id/ln_admin_khachhang1"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:padding="5dp">
-           <ImageView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:src="@drawable/ic_left_arrow"/>
-           <TextView
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:gravity="center_horizontal"
-               android:text="Quản lý Khách hàng"
-               android:textStyle="bold"
-               android:textColor="@color/black"
-               android:textSize="23dp" />
-       </LinearLayout>
-
-        <ImageButton
-            android:id="@+id/btn_admin_khachhang_search"
-            android:layout_marginTop="23dp"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_below="@id/ln_admin_khachhang1"
-            android:layout_toRightOf="@id/search_admin_san"
-            android:backgroundTint="#FFFFFF"
-            android:src="@android:drawable/ic_menu_search" />
-
-        <TextView
-            android:layout_marginLeft="10dp"
-            android:id="@+id/tv_admin_khachhang_timkh"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tìm KH:"
-            android:layout_marginTop="35dp"
-            android:textColor="@color/black"
-            android:layout_below="@id/ln_admin_khachhang1"
-            />
-        <EditText
-            android:id="@+id/search_admin_san"
-            android:layout_width="280dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/ln_admin_khachhang1"
-            android:layout_toRightOf="@id/tv_admin_khachhang_timkh"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="19dp"
-            android:layout_marginRight="3dp"
-            android:hint="Tên khách hàng"
-            android:textSize="16dp" />
-        <androidx.recyclerview.widget.RecyclerView
+        <LinearLayout
+            android:id="@+id/ln_admin_douong"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/search_admin_san">
+            android:padding="5dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="Quản lý khách hàng"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="23dp" />
+        </LinearLayout>
+
+        <SearchView
+            android:id="@+id/search_admin_khachhang"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ln_admin_douong"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginRight="10dp"
+            android:queryHint="Tên khách hàng"
+            android:textSize="16dp"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/bg_btn_google"
+            android:backgroundTint="#C5C5C5"
+            android:iconifiedByDefault="false"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_admin_khachhang"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/search_admin_khachhang">
         </androidx.recyclerview.widget.RecyclerView>
     </RelativeLayout>
-
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/admin_navigation"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/baseline_add_24"
-        tools:ignore="MissingConstraints" />
-
-
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/admin_navigation"
