--- a/app/src/main/res/layout/admin_khachhang_info.xml
+++ b/app/src/main/res/layout/admin_khachhang_info.xml
@@ -9,74 +9,71 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp">
-
-
-            <ImageView
-                android:id="@+id/btn_admin_douong_themdouong_goback"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_left_arrow"/>
-            <TextView
-                android:id="@+id/layout_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="Thêm Đồ Uống"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textSize="23dp" />
-
         <ImageView
-            android:id="@+id/img_chooser"
+            android:id="@+id/btn_admin_khachhang_info_goback"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_left_arrow"/>
+        <TextView
+            android:id="@+id/layout_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Thông tin khách hàng"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textSize="23dp" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imv_admin_khachhang_info_anh"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginTop="25dp"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/layout_title"
-            android:src="@drawable/ic_add_image"
+            android:src="@drawable/profile"
             />
         <TextView
-            android:id="@+id/tv_tendouong"
+            android:id="@+id/tv_admin_khachhang_info_ten"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/img_chooser"
-            android:text="Tên đồ uống"
+            android:layout_below="@id/imv_admin_khachhang_info_anh"
+            android:text="Tên khách hàng"
             android:textColor="@color/black"
             android:textSize="18dp"
             android:layout_marginTop="35dp"
             android:layout_marginLeft="12dp"/>
         <EditText
-            android:id="@+id/edt_admin_douong_themdouong_tendouong"
+            android:id="@+id/edt_admin_khachhang_info_tenkh"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv_tendouong"
+            android:layout_below="@id/tv_admin_khachhang_info_ten"
             android:layout_marginLeft="30dp"
             android:textSize="18dp"/>
         <TextView
             android:id="@+id/tv_sl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/edt_admin_douong_themdouong_tendouong"
-            android:text="Số lượng"
+            android:layout_below="@id/edt_admin_khachhang_info_tenkh"
+            android:text="Số điện thoại"
             android:textColor="@color/black"
             android:textSize="18dp"
             android:layout_marginTop="35dp"
             android:layout_marginLeft="12dp"/>
         <EditText
-            android:id="@+id/edt_admin_douong_themdouong_sl"
+            android:id="@+id/edt_admin_khachhang_info_sdt"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_sl"
             android:layout_marginLeft="30dp"
             android:textSize="18dp"
-            android:inputType="number"
-            android:maxLength="3"/>
+            android:inputType="number" />
         <TextView
             android:id="@+id/tv_gia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/edt_admin_douong_themdouong_sl"
-            android:text="Mức giá"
+            android:layout_below="@id/edt_admin_khachhang_info_sdt"
+            android:text="Email"
             android:textColor="@color/black"
             android:textSize="18dp"
             android:layout_marginTop="35dp"
@@ -90,10 +87,28 @@
             android:layout_marginLeft="30dp"
             android:singleLine="false"
             android:textSize="18dp"
-            android:inputType="number"
-            android:maxLength="6"/>
+            android:inputType="number" />
 
+        <TextView
+            android:id="@+id/tv_admin_khachhang_info_birthdate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/edt_admin_khachhang_info_email"
+            android:text="Ngày sinh"
+            android:textColor="@color/black"
+            android:textSize="18dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginLeft="12dp"/>
 
+        <EditText
+            android:id="@+id/edt_admin_khachhang_info_birthdate"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_admin_khachhang_info_birthdate"
+            android:layout_marginLeft="30dp"
+            android:singleLine="false"
+            android:textSize="18dp"
+            android:inputType="number" />
         <Button
             android:id="@+id/btn_admin_douong_themdouong_add"
             android:layout_width="250dp"
@@ -103,15 +118,9 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/round_button"
             android:text="Thêm"
+            android:visibility="gone"
             android:layout_centerHorizontal="true"
             app:backgroundTint="#50C878" />
 
-        <ProgressBar
-            android:id="@+id/progressBar_admin_douong_themdouong"
-            style="?android:attr/progressBarStyle"
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:visibility="gone"
-            android:layout_height="wrap_content" />
     </RelativeLayout>
 </ScrollView>
