--- a/app/src/main/res/layout/admin_san_add.xml
+++ b/app/src/main/res/layout/admin_san_add.xml
@@ -10,25 +10,20 @@
         android:layout_height="match_parent"
         android:padding="5dp">
 
-        <LinearLayout
-            android:id="@+id/layout_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
             <ImageView
                 android:id="@+id/btn_admin_san_themsan_goback"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_left_arrow"/>
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/layout_title"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
+                android:layout_centerHorizontal="true"
                 android:text="Thêm Sân"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="23dp" />
-        </LinearLayout>
 
         <ImageView
             android:id="@+id/imv_admin_san_themsan_anhsan"
@@ -37,7 +32,7 @@
             android:layout_marginTop="25dp"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/layout_title"
-            android:src="@drawable/ic_san"
+            android:src="@drawable/ic_add_image"
             />
         <TextView
             android:id="@+id/tv_tendouong"
