--- a/app/src/main/res/layout/khachhang_chondouong_item.xml
+++ b/app/src/main/res/layout/khachhang_chondouong_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fram_douong"
     android:layout_width="172dp"
-    android:layout_height="wrap_content"
+    android:layout_height="230dp"
     android:background="@drawable/framw_background_douong"
     android:layout_marginTop="10dp"
     android:layout_marginLeft="10dp">
@@ -37,9 +37,9 @@
             android:id="@+id/tv_khachhang_chondouong_item_gia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv_khachhang_chondouong_item_tendouong"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="17dp"
+            android:layout_marginBottom="12dp"
+            android:layout_alignParentBottom="true"
             android:text="8.000VND"
             android:textColor="#D35400"
             android:textSize="15dp"
@@ -49,9 +49,9 @@
             android:id="@+id/bt_add"
             android:layout_width="44dp"
             android:layout_height="37dp"
-            android:layout_below="@id/tv_khachhang_chondouong_item_tendouong"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
+            android:layout_alignParentBottom="true"
+
             android:layout_toRightOf="@id/tv_khachhang_chondouong_item_gia"
             android:background="@drawable/bg_btn_google"
             android:drawableLeft="@drawable/baseline_add_24"
