--- a/app/src/main/res/layout/admin_datlich.xml
+++ b/app/src/main/res/layout/admin_datlich.xml
@@ -7,43 +7,44 @@
 
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="Quản lý khách hàng"
+        android:textAlignment="center"
         android:paddingTop="10dp"
+        android:text="Quản lý đặt lịch"
         android:textColor="@color/black"
         android:textSize="23dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <SearchView
-        android:id="@+id/search_admin_khachhang"
+        android:id="@+id/search_admin_datlich"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_btn_google"
-        android:layout_marginTop="15dp"
         android:backgroundTint="#C5C5C5"
         android:iconifiedByDefault="false"
+        android:layout_marginTop="15dp"
         android:queryHint="Tên khách hàng"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_admin_khachhang"
+        android:id="@+id/rcv_admin_datlich"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_below="@id/search_admin_khachhang"
-        app:layout_constraintTop_toBottomOf="@+id/search_admin_khachhang"
-        app:layout_constraintBottom_toTopOf="@id/admin_navigation"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/search_admin_datlich"
+        app:layout_constraintBottom_toTopOf="@id/bottom_admin_datlich_layout">
 
     </androidx.recyclerview.widget.RecyclerView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/admin_navigation"
+        android:id="@+id/bottom_admin_datlich_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
