--- a/app/src/main/res/layout/admin_douong.xml
+++ b/app/src/main/res/layout/admin_douong.xml
@@ -5,48 +5,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints">
-        <LinearLayout
-            android:id="@+id/ln_admin_douong"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp">
+        android:paddingTop="10dp"
+        android:text="Quản lý Đồ uống"
+        android:textColor="@color/black"
+        android:textSize="23dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="Quản lý Đồ uống"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textSize="23dp" />
-        </LinearLayout>
+    <SearchView
+        android:id="@+id/search_admin_douong"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_btn_google"
+        android:backgroundTint="#C5C5C5"
+        android:iconifiedByDefault="false"
+        android:layout_marginTop="15dp"
+        android:queryHint="Tên đồ uống"
+        android:textSize="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-        <SearchView
-            android:id="@+id/search_admin_douong"
-            android:layout_width="320dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/ln_admin_douong"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="19dp"
-            android:layout_marginRight="10dp"
-            android:queryHint="Tên đồ uống"
-            android:textSize="16dp"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/bg_btn_google"
-            android:backgroundTint="#C5C5C5"
-            android:iconifiedByDefault="false"/>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_admin_douong"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_below="@id/search_admin_douong">
-        </androidx.recyclerview.widget.RecyclerView>
-    </RelativeLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcv_admin_douong"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/search_admin_douong"
+        app:layout_constraintBottom_toTopOf="@id/admin_navigation">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -60,8 +54,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/baseline_add_24"
         tools:ignore="MissingConstraints" />
-
-
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/admin_navigation"
