--- a/app/src/main/res/layout/admin_san.xml
+++ b/app/src/main/res/layout/admin_san.xml
@@ -5,50 +5,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+
+    <TextView
+        android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints">
-        <LinearLayout
-            android:id="@+id/ln_admin_san"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="Quản lý Sân"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textSize="23dp" />
-        </LinearLayout>
+        android:gravity="center_horizontal"
+        android:text="Quản lý Sân"
+        android:textColor="@color/black"
+        android:textSize="23dp"
+        android:paddingTop="10dp"
+        android:textStyle="bold" />
 
-        <SearchView
-            android:id="@+id/search_admin_san"
-            android:layout_width="320dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/ln_admin_san"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="19dp"
-            android:layout_marginRight="3dp"
-            android:hint="Tên sân"
-            android:background="@drawable/bg_btn_google"
-            android:backgroundTint="#C5C5C5"
-            android:iconifiedByDefault="false"
-            android:queryHint="Tên sân" />
+    <SearchView
+        android:id="@+id/search_admin_san"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/bg_btn_google"
+        android:backgroundTint="#C5C5C5"
+        android:hint="Tên sân"
+        android:iconifiedByDefault="false"
+        android:queryHint="Tên sân"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_admin_san"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/search_admin_san">
-        </androidx.recyclerview.widget.RecyclerView>
-    </RelativeLayout>
-
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcv_admin_san"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_below="@id/search_admin_san"
+        app:layout_constraintTop_toBottomOf="@+id/search_admin_san"
+        app:layout_constraintBottom_toTopOf="@id/admin_san_navigation"
+        android:layout_marginTop="10dp">
+    </androidx.recyclerview.widget.RecyclerView>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_admin_san_them"
         android:layout_width="wrap_content"
