--- a/app/src/main/res/layout/khachhang_lichsu.xml
+++ b/app/src/main/res/layout/khachhang_lichsu.xml
@@ -17,40 +17,39 @@
         app:srcCompat="@drawable/ic_filter"
         app:tint="@color/white"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+
+    <TextView
+        android:id="@+id/tv_khachhang_lichsu_tieude"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints">
-        <TextView
-            android:id="@+id/tv_khachhang_lichsu_tieude"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="18dp"
-            android:text="Lịch sử đặt sân"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:textSize="23dp" />
+        android:paddingTop="10dp"
+        android:text="Lịch sử đặt sân"
+        android:textColor="@color/black"
+        android:textSize="23dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <ImageView
-            android:id="@+id/btn_khachhang_lichsu_nofilter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_khachhang_lichsu_tieude"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="10dp"
-            android:visibility="gone"
-            android:layout_marginTop="10dp"
-            app:srcCompat="@drawable/ic_nofilter" />
+    <ImageView
+        android:id="@+id/btn_khachhang_lichsu_nofilter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_khachhang_lichsu_tieude"
+        android:layout_alignParentEnd="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginRight="10dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/tv_khachhang_lichsu_tieude"
+        app:srcCompat="@drawable/ic_nofilter" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_khachhang_lichsu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_below="@id/btn_khachhang_lichsu_nofilter">
-        </androidx.recyclerview.widget.RecyclerView>
-    </RelativeLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcv_khachhang_lichsu"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_below="@id/btn_khachhang_lichsu_nofilter"
+        app:layout_constraintTop_toBottomOf="@+id/btn_khachhang_lichsu_nofilter"
+        app:layout_constraintBottom_toTopOf="@id/bottom_khachhang_lichsu">
+    </androidx.recyclerview.widget.RecyclerView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_khachhang_lichsu"
