--- a/app/src/main/res/layout/layout_userinfo_admin.xml
+++ b/app/src/main/res/layout/layout_userinfo_admin.xml
@@ -34,7 +34,7 @@
                     app:srcCompat="@drawable/untitleddesign" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/imgUser"
+                    android:id="@+id/imv_admin_info_anh"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView4"
@@ -44,7 +44,7 @@
                     android:src="@drawable/profile" />
 
                 <TextView
-                    android:id="@+id/tv_userFullName"
+                    android:id="@+id/tv_admin_info_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -52,28 +52,28 @@
                     android:textSize="25dp"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="@+id/imgUser"
-                    app:layout_constraintStart_toStartOf="@+id/imgUser"
-                    app:layout_constraintTop_toBottomOf="@+id/imgUser" />
+                    app:layout_constraintEnd_toEndOf="@+id/imv_admin_info_anh"
+                    app:layout_constraintStart_toStartOf="@+id/imv_admin_info_anh"
+                    app:layout_constraintTop_toBottomOf="@+id/imv_admin_info_anh" />
 
                 <TextView
-                    android:id="@+id/tv_khachhang_userinfo_email"
+                    android:id="@+id/tv_admin_info_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="nguyentoductai@gmail.com"
                     android:textSize="16dp"
                     android:textColor="@color/black"
-                    app:layout_constraintEnd_toEndOf="@+id/tv_userFullName"
-                    app:layout_constraintStart_toStartOf="@+id/tv_userFullName"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_userFullName" />
+                    app:layout_constraintEnd_toEndOf="@+id/tv_admin_info_name"
+                    app:layout_constraintStart_toStartOf="@+id/tv_admin_info_name"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_admin_info_name" />
 
                 <ImageView
                     android:id="@+id/iv_camera"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/imgUser"
-                    app:layout_constraintEnd_toEndOf="@+id/imgUser"
-                    app:layout_constraintStart_toStartOf="@+id/imgUser"
+                    app:layout_constraintBottom_toBottomOf="@+id/imv_admin_info_anh"
+                    app:layout_constraintEnd_toEndOf="@+id/imv_admin_info_anh"
+                    app:layout_constraintStart_toStartOf="@+id/imv_admin_info_anh"
                     app:srcCompat="@drawable/ic_camera" />
 
                 <LinearLayout
@@ -81,7 +81,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_marginTop="10dp"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_khachhang_userinfo_email">
+                    app:layout_constraintTop_toBottomOf="@+id/tv_admin_info_email">
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
